--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Bunny Gallery</title>
-	<link href="page2stylesheet.css" rel="stylesheet" type="text/css">
+	<link href="index2stylesheet.css" rel="stylesheet" type="text/css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Overpass&display=swap" rel="stylesheet">
 </head>
