--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
 		progress.style.height = progressHeight + "%";	
 		}
 	</script>
+	
+	<header>
+		<a href="https://yukihoshiqaq.github.io/index3/"><button class="next">Next</button></a>
+		<a href="https://yukihoshiqaq.github.io/spacebunny/"><button class="home">Home</button></a>
+	
+	</header>
 
 	<main>
 		
@@ -89,7 +95,9 @@
 		
 	</main>
 	
+	
 	<footer>
+		
 		<section class="credits">
 			
 			<p>1. Beard, N. (n.d.). Space odyssey: 10 of the most unusual creatures sent into space. Retrieved from https://www.calvertjournal.com/articles/show/2982/ten-most-unusual-creatures-sent-to-space-geckos-russia-sex</p>
